2008-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Improve resource
	estimation for Microsoft Windows systems with large memory.
	* magick/segment.c: Added some code to dump histograms with
	'-verbose -verbose'.
	* coders/tiff.c: Support reading/writing 16 and 24 bit float TIFF
	files.
	* magick/constitute.c (ExportViewPixelArea): Support exporting 16
	and 24 bit short floats.  Relies on code developed for
	GraphicsMagick by Richard Nolde.
	(ImportViewPixelArea): Support importing 16 and 24 bit short
	floats.  Relies on code developed for GraphicsMagick by Richard
	Nolde.

2008-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.h (enum QuantumOperator): Added LogQuantumOp,
	MaxQuantumOp, MinQuantumOp, and PowQuantumOp enumerations as well
	as "Log", "Max", "Min", and "Pow" options to -operator.

2008-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): The -write option was not
	implemented in a useful fashion and the +write option never worked
	at all.  Re-implement -write and eliminate +write from the
	documentation since +write is not needed.

2008-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage, WriteTIFFImage) Support reading
	and writing 64-bit integer TIFF.
	* magick/constitute.c (ImportViewPixelArea): Add support for
	importing 64-bit integer values.
	(ImportViewPixelArea): Add support for exporting 64-bit integer
	values.

2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
	sample RGB images.

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Fix a code ordering problem
	which results in 'identify' throwing an assertion for PseudoClass
	image files.  This bug was added in the 1.3.2 release.
	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.
