@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-12-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/blob.c: First pass at supporting large file access under
+        Windows.
+
+</UL>
+<p>
 2008-12-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
