@@ -1,3 +1,8 @@
+2008-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/blob.c: First pass at supporting large file access under
+	Windows.
+
 2008-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/resource.c (InitializeMagickResources): Improve resource
